--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Meu Currículo</title>
 
 
-        <link rel="stylesheet" href="cv.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
