add javascript folder

--- a/cardapio.html
+++ b/cardapio.html
@@ -18,8 +18,8 @@
     <body>
         <header>
             <nav>
-                <a href="#">Início</a>
-                <a href="cv.html">Currículo</a>
+                <a href="index.html">Currículo</a>
+                <a href="#">Cardápio</a>
             </nav>
         </header>
         <div id="top-bar"></div>
