add event listener

--- a/JavaScript/exercicios.html
+++ b/JavaScript/exercicios.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>♥ ♥ ♥</title>
 </head>
 <body>
-    <p id="teste"></p>
-    <button onclick="document.getElementById('teste').innerHTML = 'ablaubalauaba'">click</button>
-    <button onclick="document.getElementById('teste').style.color='red'">Troca cor</button>
-    <button onclick="document.getElementById('teste').style.fontSize='80px'">Aumenta fonte</button>
-    <br>
-    <p id="teste2"></p>
-    <button onclick="document.getElementById('teste2').innerHTML=(2+3)">Calcular</button>
+    <div id="container">
+        <img id="cachorro" src="https://pbs.twimg.com/media/F3WrW-aWsAAXtia.png"></img>
+    </div>
+    <button id="mostrar">Clique para uma surpresa...</button>
+
+    <script src="main.js"></script>
 </body>
 </html>
