add calculator functions

--- a/JavaScript/exercicios.html
+++ b/JavaScript/exercicios.html
@@ -9,9 +9,13 @@
 </head>
 <body>
     <div id="container">
+        <button id="fechar">x</button>
         <img id="cachorro" src="https://pbs.twimg.com/media/F3WrW-aWsAAXtia.png"></img>
     </div>
     <button id="mostrar">Clique para uma surpresa...</button>
+
+    <button onclick="calcularDoisNumeros(5,5,'*')">Calcular</button>
+    <p id="resultado"></p>
 
     <script src="main.js"></script>
 </body>
